backend:make JUnit tests executable with current Java versions and JUnit platform launcher